--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,11 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542076.md#1" target="_blank">中共鼓励“吹哨人” 打土豪的集结号？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/901030014061944_meitu_1-150x120.jpg" align ="left"></a>中共国务院近日发布文件鼓励企业建立“吹哨人”和内部举报人制度。有评论人士告诉自由亚洲电台，中国的吹哨人不是举报非法行为的“吹哨人”，而是一场新的政治运动的“吹哨人”，是掠夺私营企业家，打土豪分田地的一个集结号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 8:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541603.md#1" target="_blank">【新闻看点】真假记者？付国豪获奖10万再惹疑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541603.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1161630648-150x120.jpg" align ="left"></a>9月22日付国豪被中共以“香港报导”为由奖励了10万人民币。中共官媒《环球时报》微博称，付国豪就职环球网，属于典型“北漂”。消息传出，又一次引起了人们的注意。人们注意的是，付国豪究竟是什么身份？是不是被打就有钱拿？种种诡异再次被翻出来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541250.md#1" target="_blank">【新闻看点】北京连串大动作 中港私企一锅端？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/140915063609100615-150x120.jpg" align ="left"></a>马云退休整整10天的时候，9月20日，浙江杭州宣布，将抽调100名官员进驻阿里巴巴、吉利控股和娃哈哈等100家大型私企，作为政府事务代表。与此同时，中共对以香港首富李嘉诚为首的工商界也火力全开，掀起了一波“斗地主”的狂潮。北京一连串的大动作，不论大陆香港，对私企都不留情面，似乎是要一锅端。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541838.md#1" target="_blank">美议员提法案 促查中共渗透UN及多边组织</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/UN_Members_Flags2-150x120.jpg" align ="left"></a>周一（9月23日），全球领导人聚焦联合国之际，美国参议院外交关系委员会的两位参议员托德·扬（Todd Young）和杰夫·默克利（Jeff Merkley）提出一项法案，该法案指示美国国家情报局局长审查中共在联合国及其他国际组织中的活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541873.md#1" target="_blank">柳传志卸任联想控股（天津）法定代表人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/150615093725100311-150x120.jpg" align ="left"></a>继马云“退休”及马化腾“卸任”之后，联想集团创始人柳传志近日卸任联想控股（天津）有限公司法定代表人一职，并不再担任公司董事。近期，中国多家民企接连出现高层人事异动，加重了“私营经济退场论”的疑云。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540914.md#1" target="_blank">进驻私企代表曝光 分析指中共严控资金外逃</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/EFIJiP5UEAQUELn-150x120.jpeg" align ="left"></a>杭州市向民企派“政府事务代表”引起外界关注后，派驻官员的部分名单再被曝光。民间猜测这是新一轮公私合营的信号，但专家认为更多的是中共直接监控防止他们资金外逃，确保中共贸易战下的政权安全。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541770.md#1" target="_blank">周杰伦当年捧红品牌 美邦服饰关店逾千家</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541770.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG111246148738-150x120.jpg" align ="left"></a>对于90后的一代，周杰伦无疑是他们中学时代的心中偶像，周杰伦代言的、曾经代表着年轻人群潮流的美特斯邦威服饰，现如今却裁员关店、面临倒闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541822.md#1" target="_blank">副部长贸易磋商后 中方购买60万吨美大豆</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/04be570d8c9cd2f39561d9b88a98ebe2-150x120.jpg" align ="left"></a>上周五，美中结束为期两天的副部长级贸易磋商。媒体报导说，中国进口商于周一（9月23日）购买了约10船美国大豆，重达60万吨，交易规模与本月早些时候的一波购买相似。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 5:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541756.md#1" target="_blank">“听见慈悲”神韵交响乐台北连两场大爆满</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909230701102384-150x120.jpg" align ="left"></a>“她的辉煌，盛大的辉煌，可以说我艺术人生一甲子，第一次看到！”在国内外举办过51次个展的当代水墨水彩画家、重要美术教育推手陈忠藏最后赞叹说：“非常震撼，内心澎湃胸涌，感动的不得了。”听过神韵连结神性传统与历史画卷的原创曲目，陈忠诚说自己永远不会忘记，“今天这壮观的画面，真的我永生难忘！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 5:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541507.md#1" target="_blank">“杀猪盘”电信诈骗泛滥 单身女成“羔羊”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG111246135436-150x120.jpg" align ="left"></a>以“网恋”寻找诈骗对象，诱导其大额充值即封禁其账号的“杀猪盘”骗局在大陆泛滥。2019年1月到7月间，百合佳缘集团旗下“世纪佳缘”APP收到的涉及侵财类诈骗案件举报达1482例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 5:13 AM							</td></tr>
@@ -28,6 +21,16 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541346.md#1" target="_blank">孟晚舟23日早离开其千万豪宅去法庭聆讯</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-v-150x120.jpg" align ="left"></a>9月23日上午9点20分左右，中国华为集团公司创始人任正非之长女、华为副董事长兼财务总监孟晚舟，离开她在温哥华的豪宅，前往法庭接受聆讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 12:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540841.md#1" target="_blank">川普联大促宗教自由 法轮功代表获邀出席</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540841.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KK0WJ-150x120.jpg" align ="left"></a>周一（9月23日）上午，川普（特朗普）总统在联合国发表宗教自由演讲。川普强调，没有任何权利比宗教信仰权利对一个繁荣稳定的社会更为根本。美国将永远是全球宗教受迫害人士的传声筒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539844.md#1" target="_blank">美国国会明春为华裔二战老兵颁金章</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f9a19101e8918f7cf61d0d77b174c18a-150x120.jpg" align ="left"></a>美国总统川普去年12月签署“二战华裔老兵国会金质奖章法案”，国会将于明年春天举行金章授予仪式，二战健在老兵或其遗孀、子女可在仪式上获得金章。该项目重要推动人陈绍章和同源会21日呼吁，华裔二战老兵或其近亲到WWW.CAWW2.ORG网站注册，让老兵获得属于他们的荣誉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541542.md#1" target="_blank">违规持股受贿淫乱 涉军工集团原老总被双开</a><br></h3>落马一年多后，中国工程物理研究院应用技术研究发展中心原主任、四川久远投资控股集团有限公司原董事长邓全农日前被“双开”并移送司法。邓全农被指违规持股、买卖股票获利，收受、索要贿赂，长期淫乱等。邓全农牵涉中共四川的核武制造基地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540988.md#1" target="_blank">贸谈风向标 美官方代表团将赴华谈芬太尼</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1025079030-600x400-150x120.jpg" align ="left"></a>芬太尼一直是中美贸易谈判的风险标。美中刚刚结束新一轮贸易谈判，白宫就随后宣布，近期将有国家毒品官员率团访华、强调防止芬太尼等合成类阿片毒品输美。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540907.md#1" target="_blank">全球最老牌旅行社破产 英二战后大“撤侨”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1176561060-150x120.jpg" align ="left"></a>9月23日，全球历史最悠久的英国老牌旅行社 Thomas Cook 倒闭，造成全球60万名游客滞留、2万名员工失业。中国复星集团拥有其约18%的股份，Thomas Cook 的破产导致复兴股价暴跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 10:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539587.md#1" target="_blank">【翻墙必看】中共在香港制造的恐怖无处不在</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909220238211366-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.没有戒严的戒严 中共政法委做法在香港实施
+香港“反送中”运动持续了三个多月，随着当局镇压的升级，“7·21元朗警黑合作”、“8·31太子站警察无差别袭击市民”等邪恶手段超出了香港民众的想像，一次次刷新香港人对中共的认知，在这个过程中，市民清晰地看到中共政法委逐渐从阴暗之处跳到台面上，直接操控香港警察，正实施着.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 9:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540600.md#1" target="_blank">中共质检总局前副局长魏传忠被逮捕</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540600.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wei-chuanzhong-VCG11455125981-1-150x120.jpg" align ="left"></a>日前，已退休5年的中共国家质检总局（简称质检总局）前副局长魏传忠被逮捕，并被起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 8:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540410.md#1" target="_blank">十一临近 湘维权人士王美余突然死于看守所</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/page-4-150x120.jpg" align ="left"></a>9月23日早上，湖南公民王美余的妻子曹曙霞突然收到衡阳看守所政委的通知，称王美余在看守所死亡。曹曙霞指，王美余被他们打死了，妈妈肖湘荣听到噩耗悲痛得晕厥过去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540184.md#1" target="_blank">大陆低邮费致德国网商年损失至少50亿欧元</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540184.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/1401241125362546-600x400-150x120.jpg" align ="left"></a>德国一行业联合会的统计，中共的不公平竞争导致德国仅电子产品业一年的损失就高达50亿欧元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540656.md#1" target="_blank">湖南前副省长向力力被逮捕 曾是秦光荣下属</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/xiang-lili-1-150x120.jpg" align ="left"></a>9月23日，中共湖南省前副省长向力力涉嫌受贿案移送检方审查起诉，向力力被逮捕。向力力曾是云南省委前书记秦光荣的老下属。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540407.md#1" target="_blank">贸易战前途不明 A股三大股指齐跌</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540407.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1507281229382584-150x120.jpg" align ="left"></a>9月23日，受美中贸易战前途不明影响，A股三大股指沪指、深成指、创业板齐跌，其中沪指下跌近1%，跌下3000点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
